force-app/main/default/objects/PackingSlipTemplateOverride__c/PackingSlipTemplateOverride__c.object-meta.xml
<CustomObject>
	<label>Packing Slip Template</label>
	<nameField>
		<label>Packing Slip Template Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Packing Slip Templates</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>