force-app/main/default/objects/PackingSlipTemplateOverride__c/fields/Description__c.field-meta.xml
<CustomField>
	<fullName>Description__c</fullName>
	<label>Description</label>
	<length>255</length>
	<type>Text</type>
</CustomField>