force-app/main/default/objects/PackingSlipTemplateOverride__c/fields/Is_Active__c.field-meta.xml
<CustomField>
	<fullName>Is_Active__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Is Active</label>
	<type>Checkbox</type>
</CustomField>