force-app/main/default/objects/PackingSlipTemplateOverride__c/fields/Output_Mode__c.field-meta.xml
<CustomField>
	<fullName>Output_Mode__c</fullName>
	<label>Output Mode</label>
	<required>true</required>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value><fullName>SCREEN</fullName><default>true</default><label>Screen</label></value>
			<value><fullName>PRINT</fullName><default>false</default><label>Print</label></value>
		</valueSetDefinition>
	</valueSet>
</CustomField>