force-app/main/default/objects/PackingSlipTemplateOverride__c/fields/Subscriber_Override__c.field-meta.xml
<CustomField>
	<fullName>Subscriber_Override__c</fullName>
	<defaultValue>true</defaultValue>
	<label>Subscriber Override</label>
	<type>Checkbox</type>
</CustomField>