force-app/main/default/objects/PackingSlipTemplateOverride__c/fields/Template_Type__c.field-meta.xml
<CustomField>
	<fullName>Template_Type__c</fullName>
	<label>Template Type</label>
	<required>true</required>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value><fullName>HTML</fullName><default>true</default><label>HTML</label></value>
			<value><fullName>PDF</fullName><default>false</default><label>PDF</label></value>
			<value><fullName>ZPL</fullName><default>false</default><label>ZPL</label></value>
		</valueSetDefinition>
	</valueSet>
</CustomField>